// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PersonScreen /> should handle props 1`] = `
<PersonScreen
  appointment="Менеджер по игрушке"
  arbitraryLinkProps={
    Object {
      "children": "test",
      "href": "/test",
    }
  }
  email="example@email.com"
  name="Марина Михайловская"
  phoneHref="tel:88000000000;postd=8823"
  phoneText="88000000000 доб. 8823"
  secondPhoneHref="tel:+7900000000"
  secondPhoneText="+7 (900) 000 000"
  skype="example@skype.com"
>
  <Screen
    withDivideHeader={false}
  >
    <Portal>
      <Portal
        containerInfo={
          <div>
            <div
              class="screen full-width"
              style="z-index: 300;"
            >
              <div
                class="nav-bar"
                style="height: 56px;"
              >
                <div
                  class="button-groups"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть"
                      class="button icon stub"
                      type="button"
                    />
                  </div>
                </div>
                <div
                  class="main"
                />
                <div
                  class="button-groups end"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="false"
                      aria-label="Закрыть"
                      class="button icon"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg"
                        fill="#212121"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M20.707 3.293a1 1 0 010 1.414l-16 16a1 1 0 01-1.414-1.414l16-16a1 1 0 011.414 0z"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M3.293 3.293a1 1 0 011.414 0l16 16a1 1 0 01-1.414 1.414l-16-16a1 1 0 010-1.414z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="content full-width"
              >
                <div
                  class="avatar small"
                >
                  <div
                    class="root size-64 color__white"
                    data-testid="avatar"
                    style="--avatar-color: #d50000; --avatar-color-opacity: 0.48;"
                  >
                    <span
                      class="monogram"
                    >
                      ММ
                    </span>
                  </div>
                </div>
                <div
                  class="avatar big"
                >
                  <div
                    class="root size-104 color__white"
                    data-testid="avatar"
                    style="--avatar-color: #d50000; --avatar-color-opacity: 0.48;"
                  >
                    <span
                      class="monogram"
                    >
                      ММ
                    </span>
                  </div>
                </div>
                <span
                  class="name"
                >
                  Марина Михайловская
                </span>
                <span
                  class="appointment"
                >
                  Менеджер по игрушке
                </span>
                <div
                  class="profile-url"
                >
                  <a
                    class="link"
                    href="/test"
                  >
                    test
                  </a>
                </div>
                <div
                  class="items inner-border-bottom"
                >
                  <a
                    class="item inner-border-top"
                    href="mailto:example@email.com"
                  >
                    <div
                      class="flex-grow"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87 weight-600"
                      >
                        example@email.com
                      </span>
                      <div
                        class="M-t__1"
                      >
                        <span
                          class="size-14 line-height-20 color__gray38"
                        >
                          Электронная почта
                        </span>
                      </div>
                    </div>
                    <div
                      class="icon-circle"
                    >
                      <svg
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4.5 6.134A.995.995 0 015 6h14c.182 0 .353.049.5.134l-.03.018L12 10.821 4.53 6.152a1.03 1.03 0 00-.03-.018zM4 8.179V17a1 1 0 001 1h14a1 1 0 001-1V8.18l-7.47 4.668a1 1 0 01-1.06 0L4 8.179zM5 4a3 3 0 00-3 3v10a3 3 0 003 3h14a3 3 0 003-3V7a3 3 0 00-3-3H5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </a>
                  <a
                    class="item inner-border-top"
                    href="skype:example@skype.com?chat"
                  >
                    <div
                      class="flex-grow"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87 weight-600"
                      >
                        example@skype.com
                      </span>
                      <div
                        class="M-t__1"
                      >
                        <span
                          class="size-14 line-height-20 color__gray38"
                        >
                          Skype
                        </span>
                      </div>
                    </div>
                    <div
                      class="icon-circle"
                    >
                      <svg
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M12.146 7c-1.42 0-2.388.455-2.953 1.216-.524.706-.547 1.482-.547 1.784 0 .546.195 1.294.756 1.919.591.656 1.502 1.08 2.744 1.08.758 0 1.097.243 1.256.42.189.209.244.46.244.58 0 .122-.055.373-.244.582-.159.177-.498.419-1.256.419s-1.098-.242-1.257-.42a.945.945 0 01-.243-.58 1 1 0 10-2 0c0 .546.195 1.294.756 1.919.591.656 1.502 1.08 2.744 1.08 1.242 0 2.152-.424 2.743-1.08a2.936 2.936 0 00.757-1.92c0-.545-.195-1.294-.757-1.918C14.3 11.425 13.388 11 12.146 11c-.758 0-1.098-.242-1.257-.42a.945.945 0 01-.243-.58c0-.198.027-.422.152-.591.085-.115.367-.41 1.348-.41.717 0 1.061.255 1.24.464.102.118.17.247.213.36.035.097.044.16.046.176 0 .004 0 .005 0 0a1 1 0 002 0c0-.488-.21-1.22-.74-1.837C14.335 7.495 13.43 7 12.145 7z"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M3.515 3.515C1.445 5.583 2.052 8.138 2.37 9.069c.028.08.024.142.014.175a9.998 9.998 0 002.544 9.827 9.998 9.998 0 009.826 2.543.301.301 0 01.175.014c.931.32 3.486.926 5.555-1.143 2.069-2.069 1.463-4.624 1.143-5.554a.301.301 0 01-.014-.176 9.998 9.998 0 00-2.543-9.826 9.998 9.998 0 00-9.827-2.544.302.302 0 01-.175-.014c-.93-.32-3.486-.925-5.554 1.144zm.748 4.904c-.254-.737-.556-2.268.666-3.49 1.222-1.222 2.753-.92 3.49-.666.42.144.901.18 1.375.045a7.998 7.998 0 017.863 2.035 7.998 7.998 0 012.034 7.863c-.135.474-.098.956.046 1.375.253.737.556 2.268-.666 3.49-1.222 1.222-2.753.92-3.49.666a2.296 2.296 0 00-1.375-.046 7.998 7.998 0 01-7.863-2.034 7.998 7.998 0 01-2.035-7.863 2.296 2.296 0 00-.045-1.375z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </a>
                  <a
                    class="item inner-border-top"
                    href="tel:88000000000;postd=8823"
                  >
                    <div
                      class="flex-grow"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87 weight-600"
                      >
                        88000000000 доб. 8823
                      </span>
                      <div
                        class="M-t__1"
                      >
                        <span
                          class="size-14 line-height-20 color__gray38"
                        >
                          Рабочий
                        </span>
                      </div>
                    </div>
                    <div
                      class="icon-circle"
                    >
                      <svg
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M7.722 1.484C7.199 1.21 6.597 1 6 1c-.36 0-.68.132-.904.25-.241.125-.479.29-.7.466-.445.351-.913.81-1.34 1.275-.834.904-1.664 1.989-1.95 2.562-.362.723-.454 1.614-.384 2.524.07.925.316 1.956.717 3.024.8 2.137 2.255 4.507 4.354 6.606 2.096 2.097 4.583 3.67 6.826 4.593 1.122.461 2.209.772 3.177.895.941.12 1.893.078 2.651-.3.58-.29 1.664-1.12 2.567-1.953.464-.428.922-.894 1.272-1.339.175-.222.34-.46.466-.7.117-.225.248-.543.248-.903 0-1.108-.685-2.341-1.515-3.24C20.644 13.847 19.397 13 18 13c-.304 0-.588.086-.804.169a5.795 5.795 0 00-.683.323c-.35.19-.739.43-1.1.654l-.252.157c-.454.279-.842.506-1.153.643-.093.04-.163.066-.213.082a14.545 14.545 0 01-2.761-1.906c-.904-.79-1.648-1.646-2.08-2.453a2.12 2.12 0 01.103-.327c.14-.363.373-.813.652-1.321.067-.123.138-.25.21-.378.208-.377.426-.77.6-1.12.12-.238.232-.483.317-.717C10.915 6.589 11 6.3 11 6c0-1.316-.862-2.562-1.748-3.405a6.925 6.925 0 00-1.53-1.111zm1.223 9.255v-.009a.04.04 0 000 .009zm4.762 4.31zM9 5.979c-.003.011-.012.057-.045.146-.047.13-.122.299-.225.506-.153.307-.339.642-.54 1.005-.077.137-.155.278-.234.423-.277.505-.572 1.062-.765 1.564-.097.251-.185.53-.224.808-.037.264-.047.645.139 1.016.58 1.16 1.558 2.26 2.61 3.18 1.061.928 2.256 1.727 3.337 2.267.372.187.75.168 1.006.124.267-.046.527-.141.754-.241.454-.2.952-.498 1.395-.77l.284-.176c.356-.22.68-.42.976-.582.184-.1.33-.17.442-.212a.917.917 0 01.114-.037c.599.01 1.341.411 1.991 1.116.636.689.953 1.416.983 1.823a2.621 2.621 0 01-.282.426c-.26.329-.634.716-1.058 1.107-.873.805-1.789 1.475-2.105 1.634-.242.12-.728.204-1.505.105-.75-.095-1.664-.347-2.667-.76-2.007-.827-4.27-2.255-6.174-4.158-1.901-1.901-3.197-4.03-3.896-5.894-.35-.932-.541-1.776-.595-2.476-.055-.715.04-1.199.178-1.476.156-.31.825-1.225 1.632-2.1.392-.426.78-.801 1.11-1.062a2.635 2.635 0 01.425-.282c.16.014.41.083.733.253.354.185.733.458 1.08.788C8.601 4.737 8.988 5.48 9 5.979zM6.094 2.99l-.001.001h.001z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </a>
                  <a
                    class="item inner-border-top"
                    href="tel:+7900000000"
                  >
                    <div
                      class="flex-grow"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87 weight-600"
                      >
                        +7 (900) 000 000
                      </span>
                      <div
                        class="M-t__1"
                      >
                        <span
                          class="size-14 line-height-20 color__gray38"
                        >
                          Сотовый
                        </span>
                      </div>
                    </div>
                    <div
                      class="icon-circle"
                    >
                      <svg
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M6 1a2 2 0 00-2 2v17a2 2 0 002 2h12a2 2 0 002-2V3a2 2 0 00-2-2H6zm1 2a1 1 0 00-1 1v14h12V4a1 1 0 00-1-1H7zm5 18a1 1 0 100-2 1 1 0 000 2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <div
          className="screen full-width"
          style={
            Object {
              "zIndex": 300,
            }
          }
        >
          <ScreenLayout
            childrenRef={[Function]}
            fullScrollThreshold={320}
            onBack={[Function]}
            onClose={[Function]}
            withBackButton={false}
            withCloseButton={true}
            withDivideHeader={false}
            withHeader={true}
          >
            <NavBar
              bottomBordered={false}
              buttons={
                Object {
                  "end": Object {
                    "aria-label": "Закрыть",
                    "icon": Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "render": [Function],
                    },
                    "onClick": [Function],
                  },
                  "start": undefined,
                }
              }
            >
              <div
                className="nav-bar"
                style={
                  Object {
                    "height": "56px",
                  }
                }
              >
                <div
                  className="button-groups"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть"
                      icon={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        }
                      }
                      onClick={[Function]}
                      stub={true}
                    >
                      <button
                        aria-hidden={true}
                        aria-label="Закрыть"
                        className="button icon stub"
                        onClick={[Function]}
                        type="button"
                      />
                    </NavButton>
                  </div>
                </div>
                <div
                  className="main"
                />
                <div
                  className="button-groups end"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть"
                      icon={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        }
                      }
                      onClick={[Function]}
                    >
                      <button
                        aria-hidden={false}
                        aria-label="Закрыть"
                        className="button icon"
                        onClick={[Function]}
                        type="button"
                      >
                        <ForwardRef(CrossSVG)
                          aria-hidden="true"
                          className="svg"
                          fill="#212121"
                        >
                          <svg
                            aria-hidden="true"
                            className="svg"
                            fill="#212121"
                            height={24}
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              clipRule="evenodd"
                              d="M20.707 3.293a1 1 0 010 1.414l-16 16a1 1 0 01-1.414-1.414l16-16a1 1 0 011.414 0z"
                              fillRule="evenodd"
                            />
                            <path
                              clipRule="evenodd"
                              d="M3.293 3.293a1 1 0 011.414 0l16 16a1 1 0 01-1.414 1.414l-16-16a1 1 0 010-1.414z"
                              fillRule="evenodd"
                            />
                          </svg>
                        </ForwardRef(CrossSVG)>
                      </button>
                    </NavButton>
                  </div>
                </div>
              </div>
            </NavBar>
            <div
              className="content full-width"
            >
              <div
                className="avatar small"
              >
                <UserAvatar
                  size={64}
                  title="Марина Михайловская"
                >
                  <Avatar
                    bgColor="additional-deep-red"
                    bgOpacity={0.48}
                    size={64}
                    textColor="white"
                    title="Марина Михайловская"
                  >
                    <div
                      className="root size-64 color__white"
                      data-testid="avatar"
                      style={
                        Object {
                          "--avatar-color": "#d50000",
                          "--avatar-color-opacity": 0.48,
                        }
                      }
                    >
                      <span
                        className="monogram"
                      >
                        ММ
                      </span>
                    </div>
                  </Avatar>
                </UserAvatar>
              </div>
              <div
                className="avatar big"
              >
                <UserAvatar
                  size={104}
                  title="Марина Михайловская"
                >
                  <Avatar
                    bgColor="additional-deep-red"
                    bgOpacity={0.48}
                    size={104}
                    textColor="white"
                    title="Марина Михайловская"
                  >
                    <div
                      className="root size-104 color__white"
                      data-testid="avatar"
                      style={
                        Object {
                          "--avatar-color": "#d50000",
                          "--avatar-color-opacity": 0.48,
                        }
                      }
                    >
                      <span
                        className="monogram"
                      >
                        ММ
                      </span>
                    </div>
                  </Avatar>
                </UserAvatar>
              </div>
              <span
                className="name"
              >
                Марина Михайловская
              </span>
              <span
                className="appointment"
              >
                Менеджер по игрушке
              </span>
              <div
                className="profile-url"
              >
                <a
                  className="link"
                  href="/test"
                >
                  test
                </a>
              </div>
              <div
                className="items inner-border-bottom"
              >
                <CommunicateLink
                  href="mailto:example@email.com"
                  icon={<ForwardRef(MailSVG) />}
                  primaryText="example@email.com"
                  secondaryText="Электронная почта"
                >
                  <a
                    className="item inner-border-top"
                    href="mailto:example@email.com"
                  >
                    <Box
                      flex="grow"
                    >
                      <div
                        className="flex-grow"
                      >
                        <ForwardRef(Text)
                          color="gray87"
                          lineHeight={24}
                          size={16}
                          weight={600}
                        >
                          <span
                            className="size-16 line-height-24 color__gray87 weight-600"
                            style={Object {}}
                          >
                            example@email.com
                          </span>
                        </ForwardRef(Text)>
                        <Box
                          marginTop={1}
                        >
                          <div
                            className="M-t__1"
                          >
                            <ForwardRef(Text)
                              color="gray38"
                              lineHeight={20}
                              size={14}
                            >
                              <span
                                className="size-14 line-height-20 color__gray38"
                                style={Object {}}
                              >
                                Электронная почта
                              </span>
                            </ForwardRef(Text)>
                          </div>
                        </Box>
                      </div>
                    </Box>
                    <div
                      className="icon-circle"
                    >
                      <ForwardRef(MailSVG)>
                        <svg
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M4.5 6.134A.995.995 0 015 6h14c.182 0 .353.049.5.134l-.03.018L12 10.821 4.53 6.152a1.03 1.03 0 00-.03-.018zM4 8.179V17a1 1 0 001 1h14a1 1 0 001-1V8.18l-7.47 4.668a1 1 0 01-1.06 0L4 8.179zM5 4a3 3 0 00-3 3v10a3 3 0 003 3h14a3 3 0 003-3V7a3 3 0 00-3-3H5z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </ForwardRef(MailSVG)>
                    </div>
                  </a>
                </CommunicateLink>
                <CommunicateLink
                  href="skype:example@skype.com?chat"
                  icon={<ForwardRef(SkypeSVG) />}
                  primaryText="example@skype.com"
                  secondaryText="Skype"
                >
                  <a
                    className="item inner-border-top"
                    href="skype:example@skype.com?chat"
                  >
                    <Box
                      flex="grow"
                    >
                      <div
                        className="flex-grow"
                      >
                        <ForwardRef(Text)
                          color="gray87"
                          lineHeight={24}
                          size={16}
                          weight={600}
                        >
                          <span
                            className="size-16 line-height-24 color__gray87 weight-600"
                            style={Object {}}
                          >
                            example@skype.com
                          </span>
                        </ForwardRef(Text)>
                        <Box
                          marginTop={1}
                        >
                          <div
                            className="M-t__1"
                          >
                            <ForwardRef(Text)
                              color="gray38"
                              lineHeight={20}
                              size={14}
                            >
                              <span
                                className="size-14 line-height-20 color__gray38"
                                style={Object {}}
                              >
                                Skype
                              </span>
                            </ForwardRef(Text)>
                          </div>
                        </Box>
                      </div>
                    </Box>
                    <div
                      className="icon-circle"
                    >
                      <ForwardRef(SkypeSVG)>
                        <svg
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            d="M12.146 7c-1.42 0-2.388.455-2.953 1.216-.524.706-.547 1.482-.547 1.784 0 .546.195 1.294.756 1.919.591.656 1.502 1.08 2.744 1.08.758 0 1.097.243 1.256.42.189.209.244.46.244.58 0 .122-.055.373-.244.582-.159.177-.498.419-1.256.419s-1.098-.242-1.257-.42a.945.945 0 01-.243-.58 1 1 0 10-2 0c0 .546.195 1.294.756 1.919.591.656 1.502 1.08 2.744 1.08 1.242 0 2.152-.424 2.743-1.08a2.936 2.936 0 00.757-1.92c0-.545-.195-1.294-.757-1.918C14.3 11.425 13.388 11 12.146 11c-.758 0-1.098-.242-1.257-.42a.945.945 0 01-.243-.58c0-.198.027-.422.152-.591.085-.115.367-.41 1.348-.41.717 0 1.061.255 1.24.464.102.118.17.247.213.36.035.097.044.16.046.176 0 .004 0 .005 0 0a1 1 0 002 0c0-.488-.21-1.22-.74-1.837C14.335 7.495 13.43 7 12.145 7z"
                          />
                          <path
                            clipRule="evenodd"
                            d="M3.515 3.515C1.445 5.583 2.052 8.138 2.37 9.069c.028.08.024.142.014.175a9.998 9.998 0 002.544 9.827 9.998 9.998 0 009.826 2.543.301.301 0 01.175.014c.931.32 3.486.926 5.555-1.143 2.069-2.069 1.463-4.624 1.143-5.554a.301.301 0 01-.014-.176 9.998 9.998 0 00-2.543-9.826 9.998 9.998 0 00-9.827-2.544.302.302 0 01-.175-.014c-.93-.32-3.486-.925-5.554 1.144zm.748 4.904c-.254-.737-.556-2.268.666-3.49 1.222-1.222 2.753-.92 3.49-.666.42.144.901.18 1.375.045a7.998 7.998 0 017.863 2.035 7.998 7.998 0 012.034 7.863c-.135.474-.098.956.046 1.375.253.737.556 2.268-.666 3.49-1.222 1.222-2.753.92-3.49.666a2.296 2.296 0 00-1.375-.046 7.998 7.998 0 01-7.863-2.034 7.998 7.998 0 01-2.035-7.863 2.296 2.296 0 00-.045-1.375z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </ForwardRef(SkypeSVG)>
                    </div>
                  </a>
                </CommunicateLink>
                <CommunicateLink
                  href="tel:88000000000;postd=8823"
                  icon={<ForwardRef(PhoneSVG) />}
                  primaryText="88000000000 доб. 8823"
                  secondaryText="Рабочий"
                >
                  <a
                    className="item inner-border-top"
                    href="tel:88000000000;postd=8823"
                  >
                    <Box
                      flex="grow"
                    >
                      <div
                        className="flex-grow"
                      >
                        <ForwardRef(Text)
                          color="gray87"
                          lineHeight={24}
                          size={16}
                          weight={600}
                        >
                          <span
                            className="size-16 line-height-24 color__gray87 weight-600"
                            style={Object {}}
                          >
                            88000000000 доб. 8823
                          </span>
                        </ForwardRef(Text)>
                        <Box
                          marginTop={1}
                        >
                          <div
                            className="M-t__1"
                          >
                            <ForwardRef(Text)
                              color="gray38"
                              lineHeight={20}
                              size={14}
                            >
                              <span
                                className="size-14 line-height-20 color__gray38"
                                style={Object {}}
                              >
                                Рабочий
                              </span>
                            </ForwardRef(Text)>
                          </div>
                        </Box>
                      </div>
                    </Box>
                    <div
                      className="icon-circle"
                    >
                      <ForwardRef(PhoneSVG)>
                        <svg
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M7.722 1.484C7.199 1.21 6.597 1 6 1c-.36 0-.68.132-.904.25-.241.125-.479.29-.7.466-.445.351-.913.81-1.34 1.275-.834.904-1.664 1.989-1.95 2.562-.362.723-.454 1.614-.384 2.524.07.925.316 1.956.717 3.024.8 2.137 2.255 4.507 4.354 6.606 2.096 2.097 4.583 3.67 6.826 4.593 1.122.461 2.209.772 3.177.895.941.12 1.893.078 2.651-.3.58-.29 1.664-1.12 2.567-1.953.464-.428.922-.894 1.272-1.339.175-.222.34-.46.466-.7.117-.225.248-.543.248-.903 0-1.108-.685-2.341-1.515-3.24C20.644 13.847 19.397 13 18 13c-.304 0-.588.086-.804.169a5.795 5.795 0 00-.683.323c-.35.19-.739.43-1.1.654l-.252.157c-.454.279-.842.506-1.153.643-.093.04-.163.066-.213.082a14.545 14.545 0 01-2.761-1.906c-.904-.79-1.648-1.646-2.08-2.453a2.12 2.12 0 01.103-.327c.14-.363.373-.813.652-1.321.067-.123.138-.25.21-.378.208-.377.426-.77.6-1.12.12-.238.232-.483.317-.717C10.915 6.589 11 6.3 11 6c0-1.316-.862-2.562-1.748-3.405a6.925 6.925 0 00-1.53-1.111zm1.223 9.255v-.009a.04.04 0 000 .009zm4.762 4.31zM9 5.979c-.003.011-.012.057-.045.146-.047.13-.122.299-.225.506-.153.307-.339.642-.54 1.005-.077.137-.155.278-.234.423-.277.505-.572 1.062-.765 1.564-.097.251-.185.53-.224.808-.037.264-.047.645.139 1.016.58 1.16 1.558 2.26 2.61 3.18 1.061.928 2.256 1.727 3.337 2.267.372.187.75.168 1.006.124.267-.046.527-.141.754-.241.454-.2.952-.498 1.395-.77l.284-.176c.356-.22.68-.42.976-.582.184-.1.33-.17.442-.212a.917.917 0 01.114-.037c.599.01 1.341.411 1.991 1.116.636.689.953 1.416.983 1.823a2.621 2.621 0 01-.282.426c-.26.329-.634.716-1.058 1.107-.873.805-1.789 1.475-2.105 1.634-.242.12-.728.204-1.505.105-.75-.095-1.664-.347-2.667-.76-2.007-.827-4.27-2.255-6.174-4.158-1.901-1.901-3.197-4.03-3.896-5.894-.35-.932-.541-1.776-.595-2.476-.055-.715.04-1.199.178-1.476.156-.31.825-1.225 1.632-2.1.392-.426.78-.801 1.11-1.062a2.635 2.635 0 01.425-.282c.16.014.41.083.733.253.354.185.733.458 1.08.788C8.601 4.737 8.988 5.48 9 5.979zM6.094 2.99l-.001.001h.001z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </ForwardRef(PhoneSVG)>
                    </div>
                  </a>
                </CommunicateLink>
                <CommunicateLink
                  href="tel:+7900000000"
                  icon={<ForwardRef(MobileSVG) />}
                  primaryText="+7 (900) 000 000"
                  secondaryText="Сотовый"
                >
                  <a
                    className="item inner-border-top"
                    href="tel:+7900000000"
                  >
                    <Box
                      flex="grow"
                    >
                      <div
                        className="flex-grow"
                      >
                        <ForwardRef(Text)
                          color="gray87"
                          lineHeight={24}
                          size={16}
                          weight={600}
                        >
                          <span
                            className="size-16 line-height-24 color__gray87 weight-600"
                            style={Object {}}
                          >
                            +7 (900) 000 000
                          </span>
                        </ForwardRef(Text)>
                        <Box
                          marginTop={1}
                        >
                          <div
                            className="M-t__1"
                          >
                            <ForwardRef(Text)
                              color="gray38"
                              lineHeight={20}
                              size={14}
                            >
                              <span
                                className="size-14 line-height-20 color__gray38"
                                style={Object {}}
                              >
                                Сотовый
                              </span>
                            </ForwardRef(Text)>
                          </div>
                        </Box>
                      </div>
                    </Box>
                    <div
                      className="icon-circle"
                    >
                      <ForwardRef(MobileSVG)>
                        <svg
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M6 1a2 2 0 00-2 2v17a2 2 0 002 2h12a2 2 0 002-2V3a2 2 0 00-2-2H6zm1 2a1 1 0 00-1 1v14h12V4a1 1 0 00-1-1H7zm5 18a1 1 0 100-2 1 1 0 000 2z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </ForwardRef(MobileSVG)>
                    </div>
                  </a>
                </CommunicateLink>
              </div>
            </div>
          </ScreenLayout>
        </div>
      </Portal>
    </Portal>
  </Screen>
</PersonScreen>
`;

exports[`<PersonScreen /> should render with name 1`] = `
<PersonScreen
  name="Марина Михайловская"
  phoneText="88000000000 доб. 8823"
  secondPhoneText="+7 (900) 000 000"
>
  <Screen
    withDivideHeader={false}
  >
    <Portal>
      <Portal
        containerInfo={
          <div>
            <div
              class="screen full-width"
              style="z-index: 300;"
            >
              <div
                class="nav-bar"
                style="height: 56px;"
              >
                <div
                  class="button-groups"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть"
                      class="button icon stub"
                      type="button"
                    />
                  </div>
                </div>
                <div
                  class="main"
                />
                <div
                  class="button-groups end"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="false"
                      aria-label="Закрыть"
                      class="button icon"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg"
                        fill="#212121"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M20.707 3.293a1 1 0 010 1.414l-16 16a1 1 0 01-1.414-1.414l16-16a1 1 0 011.414 0z"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M3.293 3.293a1 1 0 011.414 0l16 16a1 1 0 01-1.414 1.414l-16-16a1 1 0 010-1.414z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="content full-width"
              >
                <div
                  class="avatar small"
                >
                  <div
                    class="root size-64 color__white"
                    data-testid="avatar"
                    style="--avatar-color: #d50000; --avatar-color-opacity: 0.48;"
                  >
                    <span
                      class="monogram"
                    >
                      ММ
                    </span>
                  </div>
                </div>
                <div
                  class="avatar big"
                >
                  <div
                    class="root size-104 color__white"
                    data-testid="avatar"
                    style="--avatar-color: #d50000; --avatar-color-opacity: 0.48;"
                  >
                    <span
                      class="monogram"
                    >
                      ММ
                    </span>
                  </div>
                </div>
                <span
                  class="name"
                >
                  Марина Михайловская
                </span>
                <div
                  class="items inner-border-bottom"
                >
                  <a
                    class="item inner-border-top"
                  >
                    <div
                      class="flex-grow"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87 weight-600"
                      >
                        88000000000 доб. 8823
                      </span>
                      <div
                        class="M-t__1"
                      >
                        <span
                          class="size-14 line-height-20 color__gray38"
                        >
                          Рабочий
                        </span>
                      </div>
                    </div>
                    <div
                      class="icon-circle"
                    >
                      <svg
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M7.722 1.484C7.199 1.21 6.597 1 6 1c-.36 0-.68.132-.904.25-.241.125-.479.29-.7.466-.445.351-.913.81-1.34 1.275-.834.904-1.664 1.989-1.95 2.562-.362.723-.454 1.614-.384 2.524.07.925.316 1.956.717 3.024.8 2.137 2.255 4.507 4.354 6.606 2.096 2.097 4.583 3.67 6.826 4.593 1.122.461 2.209.772 3.177.895.941.12 1.893.078 2.651-.3.58-.29 1.664-1.12 2.567-1.953.464-.428.922-.894 1.272-1.339.175-.222.34-.46.466-.7.117-.225.248-.543.248-.903 0-1.108-.685-2.341-1.515-3.24C20.644 13.847 19.397 13 18 13c-.304 0-.588.086-.804.169a5.795 5.795 0 00-.683.323c-.35.19-.739.43-1.1.654l-.252.157c-.454.279-.842.506-1.153.643-.093.04-.163.066-.213.082a14.545 14.545 0 01-2.761-1.906c-.904-.79-1.648-1.646-2.08-2.453a2.12 2.12 0 01.103-.327c.14-.363.373-.813.652-1.321.067-.123.138-.25.21-.378.208-.377.426-.77.6-1.12.12-.238.232-.483.317-.717C10.915 6.589 11 6.3 11 6c0-1.316-.862-2.562-1.748-3.405a6.925 6.925 0 00-1.53-1.111zm1.223 9.255v-.009a.04.04 0 000 .009zm4.762 4.31zM9 5.979c-.003.011-.012.057-.045.146-.047.13-.122.299-.225.506-.153.307-.339.642-.54 1.005-.077.137-.155.278-.234.423-.277.505-.572 1.062-.765 1.564-.097.251-.185.53-.224.808-.037.264-.047.645.139 1.016.58 1.16 1.558 2.26 2.61 3.18 1.061.928 2.256 1.727 3.337 2.267.372.187.75.168 1.006.124.267-.046.527-.141.754-.241.454-.2.952-.498 1.395-.77l.284-.176c.356-.22.68-.42.976-.582.184-.1.33-.17.442-.212a.917.917 0 01.114-.037c.599.01 1.341.411 1.991 1.116.636.689.953 1.416.983 1.823a2.621 2.621 0 01-.282.426c-.26.329-.634.716-1.058 1.107-.873.805-1.789 1.475-2.105 1.634-.242.12-.728.204-1.505.105-.75-.095-1.664-.347-2.667-.76-2.007-.827-4.27-2.255-6.174-4.158-1.901-1.901-3.197-4.03-3.896-5.894-.35-.932-.541-1.776-.595-2.476-.055-.715.04-1.199.178-1.476.156-.31.825-1.225 1.632-2.1.392-.426.78-.801 1.11-1.062a2.635 2.635 0 01.425-.282c.16.014.41.083.733.253.354.185.733.458 1.08.788C8.601 4.737 8.988 5.48 9 5.979zM6.094 2.99l-.001.001h.001z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </a>
                  <a
                    class="item inner-border-top"
                  >
                    <div
                      class="flex-grow"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87 weight-600"
                      >
                        +7 (900) 000 000
                      </span>
                      <div
                        class="M-t__1"
                      >
                        <span
                          class="size-14 line-height-20 color__gray38"
                        >
                          Сотовый
                        </span>
                      </div>
                    </div>
                    <div
                      class="icon-circle"
                    >
                      <svg
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M6 1a2 2 0 00-2 2v17a2 2 0 002 2h12a2 2 0 002-2V3a2 2 0 00-2-2H6zm1 2a1 1 0 00-1 1v14h12V4a1 1 0 00-1-1H7zm5 18a1 1 0 100-2 1 1 0 000 2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <div
          className="screen full-width"
          style={
            Object {
              "zIndex": 300,
            }
          }
        >
          <ScreenLayout
            childrenRef={[Function]}
            fullScrollThreshold={320}
            onBack={[Function]}
            onClose={[Function]}
            withBackButton={false}
            withCloseButton={true}
            withDivideHeader={false}
            withHeader={true}
          >
            <NavBar
              bottomBordered={false}
              buttons={
                Object {
                  "end": Object {
                    "aria-label": "Закрыть",
                    "icon": Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "render": [Function],
                    },
                    "onClick": [Function],
                  },
                  "start": undefined,
                }
              }
            >
              <div
                className="nav-bar"
                style={
                  Object {
                    "height": "56px",
                  }
                }
              >
                <div
                  className="button-groups"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть"
                      icon={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        }
                      }
                      onClick={[Function]}
                      stub={true}
                    >
                      <button
                        aria-hidden={true}
                        aria-label="Закрыть"
                        className="button icon stub"
                        onClick={[Function]}
                        type="button"
                      />
                    </NavButton>
                  </div>
                </div>
                <div
                  className="main"
                />
                <div
                  className="button-groups end"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть"
                      icon={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        }
                      }
                      onClick={[Function]}
                    >
                      <button
                        aria-hidden={false}
                        aria-label="Закрыть"
                        className="button icon"
                        onClick={[Function]}
                        type="button"
                      >
                        <ForwardRef(CrossSVG)
                          aria-hidden="true"
                          className="svg"
                          fill="#212121"
                        >
                          <svg
                            aria-hidden="true"
                            className="svg"
                            fill="#212121"
                            height={24}
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              clipRule="evenodd"
                              d="M20.707 3.293a1 1 0 010 1.414l-16 16a1 1 0 01-1.414-1.414l16-16a1 1 0 011.414 0z"
                              fillRule="evenodd"
                            />
                            <path
                              clipRule="evenodd"
                              d="M3.293 3.293a1 1 0 011.414 0l16 16a1 1 0 01-1.414 1.414l-16-16a1 1 0 010-1.414z"
                              fillRule="evenodd"
                            />
                          </svg>
                        </ForwardRef(CrossSVG)>
                      </button>
                    </NavButton>
                  </div>
                </div>
              </div>
            </NavBar>
            <div
              className="content full-width"
            >
              <div
                className="avatar small"
              >
                <UserAvatar
                  size={64}
                  title="Марина Михайловская"
                >
                  <Avatar
                    bgColor="additional-deep-red"
                    bgOpacity={0.48}
                    size={64}
                    textColor="white"
                    title="Марина Михайловская"
                  >
                    <div
                      className="root size-64 color__white"
                      data-testid="avatar"
                      style={
                        Object {
                          "--avatar-color": "#d50000",
                          "--avatar-color-opacity": 0.48,
                        }
                      }
                    >
                      <span
                        className="monogram"
                      >
                        ММ
                      </span>
                    </div>
                  </Avatar>
                </UserAvatar>
              </div>
              <div
                className="avatar big"
              >
                <UserAvatar
                  size={104}
                  title="Марина Михайловская"
                >
                  <Avatar
                    bgColor="additional-deep-red"
                    bgOpacity={0.48}
                    size={104}
                    textColor="white"
                    title="Марина Михайловская"
                  >
                    <div
                      className="root size-104 color__white"
                      data-testid="avatar"
                      style={
                        Object {
                          "--avatar-color": "#d50000",
                          "--avatar-color-opacity": 0.48,
                        }
                      }
                    >
                      <span
                        className="monogram"
                      >
                        ММ
                      </span>
                    </div>
                  </Avatar>
                </UserAvatar>
              </div>
              <span
                className="name"
              >
                Марина Михайловская
              </span>
              <div
                className="items inner-border-bottom"
              >
                <CommunicateLink
                  icon={<ForwardRef(PhoneSVG) />}
                  primaryText="88000000000 доб. 8823"
                  secondaryText="Рабочий"
                >
                  <a
                    className="item inner-border-top"
                  >
                    <Box
                      flex="grow"
                    >
                      <div
                        className="flex-grow"
                      >
                        <ForwardRef(Text)
                          color="gray87"
                          lineHeight={24}
                          size={16}
                          weight={600}
                        >
                          <span
                            className="size-16 line-height-24 color__gray87 weight-600"
                            style={Object {}}
                          >
                            88000000000 доб. 8823
                          </span>
                        </ForwardRef(Text)>
                        <Box
                          marginTop={1}
                        >
                          <div
                            className="M-t__1"
                          >
                            <ForwardRef(Text)
                              color="gray38"
                              lineHeight={20}
                              size={14}
                            >
                              <span
                                className="size-14 line-height-20 color__gray38"
                                style={Object {}}
                              >
                                Рабочий
                              </span>
                            </ForwardRef(Text)>
                          </div>
                        </Box>
                      </div>
                    </Box>
                    <div
                      className="icon-circle"
                    >
                      <ForwardRef(PhoneSVG)>
                        <svg
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M7.722 1.484C7.199 1.21 6.597 1 6 1c-.36 0-.68.132-.904.25-.241.125-.479.29-.7.466-.445.351-.913.81-1.34 1.275-.834.904-1.664 1.989-1.95 2.562-.362.723-.454 1.614-.384 2.524.07.925.316 1.956.717 3.024.8 2.137 2.255 4.507 4.354 6.606 2.096 2.097 4.583 3.67 6.826 4.593 1.122.461 2.209.772 3.177.895.941.12 1.893.078 2.651-.3.58-.29 1.664-1.12 2.567-1.953.464-.428.922-.894 1.272-1.339.175-.222.34-.46.466-.7.117-.225.248-.543.248-.903 0-1.108-.685-2.341-1.515-3.24C20.644 13.847 19.397 13 18 13c-.304 0-.588.086-.804.169a5.795 5.795 0 00-.683.323c-.35.19-.739.43-1.1.654l-.252.157c-.454.279-.842.506-1.153.643-.093.04-.163.066-.213.082a14.545 14.545 0 01-2.761-1.906c-.904-.79-1.648-1.646-2.08-2.453a2.12 2.12 0 01.103-.327c.14-.363.373-.813.652-1.321.067-.123.138-.25.21-.378.208-.377.426-.77.6-1.12.12-.238.232-.483.317-.717C10.915 6.589 11 6.3 11 6c0-1.316-.862-2.562-1.748-3.405a6.925 6.925 0 00-1.53-1.111zm1.223 9.255v-.009a.04.04 0 000 .009zm4.762 4.31zM9 5.979c-.003.011-.012.057-.045.146-.047.13-.122.299-.225.506-.153.307-.339.642-.54 1.005-.077.137-.155.278-.234.423-.277.505-.572 1.062-.765 1.564-.097.251-.185.53-.224.808-.037.264-.047.645.139 1.016.58 1.16 1.558 2.26 2.61 3.18 1.061.928 2.256 1.727 3.337 2.267.372.187.75.168 1.006.124.267-.046.527-.141.754-.241.454-.2.952-.498 1.395-.77l.284-.176c.356-.22.68-.42.976-.582.184-.1.33-.17.442-.212a.917.917 0 01.114-.037c.599.01 1.341.411 1.991 1.116.636.689.953 1.416.983 1.823a2.621 2.621 0 01-.282.426c-.26.329-.634.716-1.058 1.107-.873.805-1.789 1.475-2.105 1.634-.242.12-.728.204-1.505.105-.75-.095-1.664-.347-2.667-.76-2.007-.827-4.27-2.255-6.174-4.158-1.901-1.901-3.197-4.03-3.896-5.894-.35-.932-.541-1.776-.595-2.476-.055-.715.04-1.199.178-1.476.156-.31.825-1.225 1.632-2.1.392-.426.78-.801 1.11-1.062a2.635 2.635 0 01.425-.282c.16.014.41.083.733.253.354.185.733.458 1.08.788C8.601 4.737 8.988 5.48 9 5.979zM6.094 2.99l-.001.001h.001z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </ForwardRef(PhoneSVG)>
                    </div>
                  </a>
                </CommunicateLink>
                <CommunicateLink
                  icon={<ForwardRef(MobileSVG) />}
                  primaryText="+7 (900) 000 000"
                  secondaryText="Сотовый"
                >
                  <a
                    className="item inner-border-top"
                  >
                    <Box
                      flex="grow"
                    >
                      <div
                        className="flex-grow"
                      >
                        <ForwardRef(Text)
                          color="gray87"
                          lineHeight={24}
                          size={16}
                          weight={600}
                        >
                          <span
                            className="size-16 line-height-24 color__gray87 weight-600"
                            style={Object {}}
                          >
                            +7 (900) 000 000
                          </span>
                        </ForwardRef(Text)>
                        <Box
                          marginTop={1}
                        >
                          <div
                            className="M-t__1"
                          >
                            <ForwardRef(Text)
                              color="gray38"
                              lineHeight={20}
                              size={14}
                            >
                              <span
                                className="size-14 line-height-20 color__gray38"
                                style={Object {}}
                              >
                                Сотовый
                              </span>
                            </ForwardRef(Text)>
                          </div>
                        </Box>
                      </div>
                    </Box>
                    <div
                      className="icon-circle"
                    >
                      <ForwardRef(MobileSVG)>
                        <svg
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M6 1a2 2 0 00-2 2v17a2 2 0 002 2h12a2 2 0 002-2V3a2 2 0 00-2-2H6zm1 2a1 1 0 00-1 1v14h12V4a1 1 0 00-1-1H7zm5 18a1 1 0 100-2 1 1 0 000 2z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </ForwardRef(MobileSVG)>
                    </div>
                  </a>
                </CommunicateLink>
              </div>
            </div>
          </ScreenLayout>
        </div>
      </Portal>
    </Portal>
  </Screen>
</PersonScreen>
`;
